--- a/custom_components/alexa_media/manifest.json
+++ b/custom_components/alexa_media/manifest.json
@@ -8,6 +8,10 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/alandtse/alexa_media_player/issues",
   "loggers": ["alexapy", "authcaptureproxy"],
-  "requirements": ["alexapy @ git+https://gitlab.com/lemoscvbl/alexapy.git@issues31a32", "packaging>=20.3", "wrapt>=1.14.0"],
+  "requirements": [
+    "alexapy @ git+https://gitlab.com/lemoscvbl/alexapy.git@issues31a32",
+    "packaging>=20.3",
+    "wrapt>=1.14.0"
+  ],
   "version": "4.12.5"
 }
